[package]
name = "waeros_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.12", features = ["std"]}
reqwest = { version = "0.11.24", features = ["rustls-tls", "blocking"], default-features = false }

[package.metadata.docs.rs]
default-target = "armv7-linux-androideabi"
